# kang

./: .dockerignore  .env.dev  .env.dev.example  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start-dev.sh  start.sh
app/: __init__.py  main.py
app/auth/: __init__.py
app/auth/models/: __init__.py  postgres_models.py  social_account.py  user.py
app/auth/repositories/: social_account_repository.py  token_repository.py  user_repository.py
app/auth/representations/: request.py  response.py
app/auth/routes/: auth.py
app/auth/services/: google_oauth_service.py  oauth_service.py  token_service.py  user_service.py
app/common/: exception.py
app/common/enums/: user_level.py
app/common/logging/: __init__.py
app/common/middleware/: access_log.py  exception_handler.py  rate_limiting.py
app/common/storage/: base_postgres.py  postgres.py  redis.py
app/common/utils/: datetime.py  singleton.py
app/rag/: __init__.py
app/rag/models/: __init__.py  document.py  embedding.py  postgres_models.py  rag_query.py
app/rag/repositories/: __init__.py
app/rag/representations/: __init__.py  request.py  response.py
app/rag/routes/: __init__.py  rag.py
app/rag/services/: __init__.py  embedding_service.py  gpt_oss_service.py  langchain_rag_service.py  (+3 more)
config/: settings.py
docs/: API_GUIDE.md  RAG_BEST_PRACTICES.md  RAG_IMPLEMENTATION_STATUS.md
migrations/: env.py
migrations/versions/: 001_create_initial_auth_tables.py  061adf9eaf75_add_rag_system_tables_documents_chunks_.py  3ec070505365_add_apple_to_oauth_provider_enum.py  8a2ecc16f2dd_add_rag_system_tables_for_documents_.py
scripts/: init-db.sql
tests/: conftest.py  test_auth_routes.py  test_main.py
(+2 files in other folders)
